<resources>
    <string name="app_name">MCR infotech</string>
    <string name="title">MCR infotech </string>
    <string name="mainTitle">MARWARI COLLEGE RANCHI</string>
    <string name="subTitle">NAAC ACCREDITED AUTONOMOUS COLLEGE</string>
    <string name="aButton">GUEST</string>
    <string name="dButton">SIGN UP</string>
    <string name="cButton">STUDENT LOGIN</string>
    <string name="bButton">ADMIN LOGIN</string>
    <string name="todo">TODO</string>
    <string name="font">Serif</string>
    <string name="new_user">New User ??</string>
    <string name="previous_year_cutoff">Previous Year Cutoff</string>
    <string name="scholarship_website">Scholarship website</string>
    <string name="fee_structure">Fee Structure</string>
    <string name="college_website">College Website</string>
    <string name="placementDrive">Placement Drive</string>
    <string name="exam_roll_no">Exam Roll No.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="student_login">Student Login</string>
    <string name="recover">Recover</string>
    <string name="sign_up">Sign up</string>
    <string name="admin_login">Admin Login</string>
    <string name="officials">Officials</string>
    <string name="new_admin">new admin?</string>
    <string name="title_activity_stud_signup">Signup</string>
    <string name="set_password">Sign up</string>
    <string name="fontss">serif-monospace</string>
    <string name="title_activity_student_sign_up">Student_sign_up</string>
    <string name="admin_signup">ADMIN SIGNUP</string>
    <string name="title_activity_student_homepage">student_homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_admin_homepage">AdminHomepage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    For Privacy Policy Link    -->
    <string name="link">
        <a href="http://marwaricollegeranchi.ac.in/">Terms Of Use</a>
    </string>
    <string name="link2">
        <a href="http://marwaricollegeranchi.ac.in/login.aspx">Privacy Policy</a>
    </string>

    <!--    For QuickLinks in Explore Student -->
    <string name="college_websiteQL">
        <a href="http://www.marwaricollegeranchi.ac.in/">College website</a>
    </string>

    <string name="placement_driveQL">
        <a href="http://www.marwaricollegeranchi.ac.in/Placement.aspx">Placement drive</a>
    </string>

    <string name="scholarship_websiteQL">
        <a href="https://ekalyan.cgg.gov.in/">Scholarship website</a>
    </string>

    <string name="chancellor_portalQL">
        <a href="https://jharkhanduniversities.nic.in/home">Chancellor portal</a>
    </string>


    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>
